# mordern_cpp_course_hw

.github/workflows/: check-homework.yml
homeworks/homework_1/hello_world/: hello  hello.cpp  helloworld.cpp
homeworks/homework_2/fortune_teller/: fortune_teller.cpp
homeworks/homework_3/guessing_game/: guessing_game.cpp
homeworks/homework_4/no_strings_attached/: CMakeLists.txt
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  split_string.cpp  split_string.h  split_string_test.cpp  string_split.cpp  string_split.h  string_trim.cpp  string_trim.h  test_string_split.cpp  test_string_trim.cpp  trim_string.cpp  trim_string.h  trim_string_test.cpp
